--- a/www/style.css
+++ b/www/style.css
@@ -1,11 +1,4 @@
-* {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box
-}
-
-
 body {
-  /* background-color: #e9e9e9; */
   background-color: #fafafa;
   color: #3f3f3f;
   font-size: 16px;
@@ -14,65 +7,17 @@ body {
   font-weight: 200;
 }
 
-
-section {
-  display: block;
-  max-width: 58.449999999999996rem;
-  margin: 0 auto;
-}
-
-
 h1 {
+  text-align: center;
   font-size: 40px;
-  line-height: 1.2;
-  margin-top: 1.5rem
-}
-
-h2 {
-  font-size: 32px;
   line-height: 1.5;
-  margin-top: 1.5rem
-}
-
-h3 {
-  font-size: 24px;
-  line-height: 1.5;
-  margin-top: 1.5rem
-}
-
-h4 {
-  font-size: 17px;
-  line-height: 1.7;
-  margin-top: 1.5rem
-}
-
-h5 {
-  font-size: 16px;
-  line-height: 1.7;
-  margin-top: 1.5rem
-}
-
-h6 {
-  font-size: 14px;
-  line-height: 1.5;
-  margin-top: 1.5rem
+  margin-bottom: 2rem
 }
 
 p {
   margin: 1.5rem 0;
   font-size: 16px;
   line-height: 1.7
-}
-
-a {
-  text-decoration: none;
-  border-bottom: 1px solid #3f3f3f;
-  color: #3f3f3f
-}
-
-a:hover,
-a:visited {
-  color: #3f3f3f
 }
 
 b,
@@ -85,60 +30,27 @@ i {
   font-style: italic
 }
 
-ul {
-  list-style-type: none
-}
-
-li {
-  font-size: 16px
-}
-
-img,
-video {
-  display: block;
-  width: 100%
-}
-
-
-header {
-  z-index: 1000;
-  opacity: 1;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: #e9e9e9
-}
-
 
 #intro {
   margin: 0 auto;
   padding: 4rem 1rem 1.5rem 1rem;
-  max-width: 58.449999999999996rem;
+  max-width: 70rem;
   font-weight: 200;
   display: block;
 }
 
-#intro h1 {
-  font-size: 40px;
-  line-height: 1.5;
-  margin-bottom: 2rem
-}
 
-p.prose {
-  max-width: 35rem;
+.prose {
+  max-width: 60rem;
   margin: 1rem auto;
   padding: 0 1rem;
   font-size: 21px;
 }
 
-
 #scrolly {
   position: relative;
   padding: 1rem;
 }
-
-
 
 figure {
   position: -webkit-sticky;
@@ -146,24 +58,6 @@ figure {
   left: 0;
   width: 100%;
   margin: 0;
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-  z-index: 0;
-}
-
-figure p {
-  text-align: center;
-  padding: 1rem;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -moz-transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  font-size: 8rem;
-  font-weight: 900;
-  color: #fff;
 }
 
 figure figcaption {
@@ -171,7 +65,6 @@ figure figcaption {
   font-size: 12px;
   line-height: 1.5;
 }
-
 
 article {
   position: relative;
@@ -207,8 +100,4 @@ article .step p {
   background-color: goldenrod;
   color: #3b3b3b;
 }
-
-
-
-
 
