--- a/www/style.css
+++ b/www/style.css
@@ -30,8 +30,7 @@ i {
   font-style: italic
 }
 
-
-#intro {
+.text-section {
   margin: 0 auto;
   padding: 4rem 1rem 1.5rem 1rem;
   max-width: 70rem;
@@ -39,20 +38,11 @@ i {
   display: block;
 }
 
-
 .prose {
-  max-width: 60rem;
-  margin: 1rem auto;
-  padding: 0 1rem;
   font-size: 21px;
 }
 
-#scrolly {
-  position: relative;
-  padding: 1rem;
-}
-
-figure {
+#story figure {
   position: -webkit-sticky;
   position: sticky;
   left: 0;
@@ -60,7 +50,7 @@ figure {
   margin: 0;
 }
 
-figure figcaption {
+#story figure figcaption {
   margin-top: 10px;
   font-size: 12px;
   line-height: 1.5;
@@ -94,7 +84,6 @@ article .step p {
   box-shadow: 0 0 10px 2px rgba(63,63,63,.25);
   font-weight: 300;
 }
-
 
 .step.is-active p {
   background-color: goldenrod;
