--- a/www/style.css
+++ b/www/style.css
@@ -123,3 +123,21 @@ article .step p {
   font-weight: 300;
 }
 
+
+#help-icon{
+  cursor: pointer;
+  color: #818181;
+  /*color:#428bca;*/
+  font-size:20px;
+}
+
+.help-block {
+  display: none;
+  font-size: 14px;
+  padding-left: 10px;
+  margin-top: -10px;
+  margin-bottom: 15px;
+  color: #818181;
+}
+
+
