--- a/www/style.css
+++ b/www/style.css
@@ -17,7 +17,8 @@ h1 {
   text-align: center;
   font-size: 40px;
   line-height: 1.5;
-  margin-bottom: 2rem
+  margin-bottom: 2rem;
+  font-weight: 700;
 }
 
 p {
